# Convex_Polygon_Triangulations

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: geometry.h  shader_tools.h  shaders_code.h
src/: geometry.cc  main.cc  shader_tools.cc
